--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
                     <meta name="viewport" content="width=device-width, initial-scale=1.0">
                     <meta name="description" content="isoext's personal website">
                     <title>isoext's web</title>
-                    <link rel="stylesheet" href="styles.css">
+                    <link rel="stylesheet" href="style.css">
                     <link rel="icon" href="/iextlabel.png" type="image/x-icon">
                 </head>
                 <body>
