--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
                 <!DOCTYPE html>
                 <html lang="en">
-                <head>
+                <head class="dark">
                     <meta charset="UTF-8">
                     <meta name="viewport" content="width=device-width, initial-scale=1.0">
                     <meta name="description" content="isoext's personal website">
@@ -8,9 +8,9 @@
                     <link rel="stylesheet" href="style.css">
                     <link rel="icon" href="/iextlabel.png" type="image/x-icon">
                 </head>
-                <body>
+                <body class="dark">
 
-                <nav>
+                <nav class="dark">
                     <ul>
                         <span class="welcome-message">
                             <h1>welcome to <font color='#007bff'>isoextension</font>'s website</h1>
@@ -20,13 +20,13 @@
                     </ul>
                 </nav>
 
-                <main>
+                <main class="dark">
                     <section>
                         <p>Hello, world!</p>
                     </section>
                 </main>
 
-                <footer>
+                <footer class="dark">
                     <span class="copy"><p>&copy; 2024 isoext. All rights reserved.</p></span>
                 </footer>
 
