--- a/index.html
+++ b/index.html
@@ -1,35 +1,45 @@
-                <!DOCTYPE html>
-                <html lang="en">
-                <head class="dark">
-                    <meta charset="UTF-8">
-                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                    <meta name="description" content="isoext's personal website">
-                    <title>isoext's web</title>
-                    <link rel="stylesheet" href="style.css">
-                    <link rel="icon" href="/iextlabel.png" type="image/x-icon">
-                </head>
-                <body class="dark">
+<!DOCTYPE html>
+<html lang="en" class="dark" id="wowzers-an-easter-egg">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="isoext's personal website">
+        <title>isoext's web</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="/iextlabel.png" type="image/x-icon">
+    </head>
+    <body class="dark">
+    <h1>welcome to <font color='#007bff'>isoextension</font>'s website</h1>      
+    <details>
+        <nav>
+            <ul>
+                <li><a href="https://sandboxels.r74n.com">sandboxels<img id="imgboxels" class="icon" src="https://raw.githubusercontent.com/R74nCom/sandboxels/main/icons/apple-touch-icon-76x76.png"></a></li>
+                <li><a href="https://r74n.com"><font color='#00FFFF'>R74n </font><img id="r74ncomimg" class="icon" src="https://r74n.com/icons/600x600.png"></a></li>
+             </ul>
+        </nav>
+    </details>
 
-                <nav class="dark">
-                    <ul>
-                        <span class="welcome-message">
-                            <h1>welcome to <font color='#007bff'>isoextension</font>'s website</h1>
-                        </span>
-                        <li><a href="https://sandboxels.r74n.com">sandboxels<img id="imgboxels"src="https://raw.githubusercontent.com/R74nCom/sandboxels/main/icons/apple-touch-icon-76x76.png"></a></li>
-                        <li><a href="https://r74n.com"><font color='#00FFFF'>R74n </font><img id="r74ncomimg" src="https://r74n.com/icons/600x600.png"></a></li>
-                    </ul>
-                </nav>
+    <main>
+        <section>
+            <details>
+                <summary>About Me</summary>
+                <p>
+                   hey so im just a silly little guy who uhhh just plays minecraft
+                </p>
+            </details>
+            <details>
+                <summary>Contact Me</summary>
+                <ul>
+                  <li>email: <a href="mailto:isoextension@gmail.com">isoextension@gmail.com</a></li>
+                  <li>matrix: <a href="https://matrix.to/#/@yaboy.toppie:matrix.org">yaboy.toppie</a></li>
+                </ul>
+            </details>
+         </section>
+        </main>
 
-                <main class="dark">
-                    <section>
-                        <p>Hello, world!</p>
-                    </section>
-                </main>
+        <footer>
+           <span class="copy"><p>&copy; <span id="year"></span> isoext. All rights reserved.</p></span>
+        </footer>
 
-                <footer class="dark">
-                    <span class="copy"><p>&copy; 2024 isoext. All rights reserved.</p></span>
-                </footer>
-
-                </body>
-                </html>
-<img class="logo-img" id="logo-img" src="./iextlabel.png">
+    </body>
+</html>
