--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </main>
 
         <footer>
-           <span class="copy"><p>&copy; <span id="year"></span> isoext. All rights reserved.</p></span>
+            <span class="copy"><p><a href="/LICENSE">MIT License </a>&copy; <span id="year"></span> isoext. All rights reserved.</p></span>
         </footer>
     <script src="/script.js"></script>
     </body>
