--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta name="description" content="isoext's personal website">
         <title>isoext's web</title>
         <link rel="stylesheet" href="/style.css">
-        <link rel="icon" href="/iextlabel.png" type="image/x-icon">
+        <link rel="icon" href="/icon/favicon.png" type="image/x-icon">
     </head>
-    <body class="dark">
+    <body>
         <label class="switch">
         <input type="checkbox" id="theme-toggle">
         <span class="slider"></span>
