--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="isoext's personal website">
         <title>isoext's web</title>
         <link rel="stylesheet" href="/style.css">
-        <link rel="icon" href="/icon/favicon.png" type="image/x-icon">
+        <link rel="icon" href="/icon/favicon.png" type="image/png">
     </head>
     <body>
         <label class="switch">
