(main): compile scss

--- a/404.html
+++ b/404.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>404</title>
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="/styles/source.css" rel="stylesheet" type="text/css" />
+        <link href="/styles/customization.css" rel="stylesheet" type="text/css" />
     </head>
 
 <body>
@@ -16,16 +17,15 @@
     </span>
     <span class="atext">
       <p>
-        hi there traveler!
+        oh hi there, didn't see you there
         <br>
-        seems you are in an empty desert.
+        why are you here? this is not the place for you.
         <br>
         <br>
         <a href="/"><button id="goback">go back</button></a>
       </p>
     </span>
   </div>
-  <script src="script.js"></script>
 </body>
 
 </html>
