--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="isoext's personal website">
         <title>isoext's web</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/styles/source.css">
+        <link rel="stylesheet" href="/styles/customization.css">
         <link rel="icon" href="/icon/favicon.png" type="image/png">
     </head>
     <body>
@@ -17,10 +18,8 @@
         <details>
             <summary>Links</summary>
                 <nav>
-                    <ul>
                     <li><a href="https://sandboxels.r74n.com">sandboxels<img id="imgboxels" class="icon" src="https://raw.githubusercontent.com/R74nCom/sandboxels/main/icons/apple-touch-icon-76x76.png"></a></li>
                     <li><a href="https://r74n.com"><font color='#00FFFF'>R74n </font><img id="r74ncomimg" class="icon" src="https://r74n.com/icons/600x600.png"></a></li>
-                </ul>
             </nav>
         </details>
 
@@ -45,6 +44,6 @@
         <footer>
             <span class="copy"><p><button onclick="showLicense()">MIT License </button>&copy; <span id="year"></span> isoext. All rights reserved.</p></span>
         </footer>
-    <script src="/script.js"></script>
+    <script src="/scripts/script.js"></script>
     </body>
 </html>
